--- a/backend/finbattle/src/main/resources/static/websocket-test.html
+++ b/backend/finbattle/src/main/resources/static/websocket-test.html
@@ -296,7 +296,7 @@
   }
 
   function connect() {
-    const socket = new SockJS('/ws/firechat');
+    const socket = new WebSocket('ws://localhost:8080/ws/firechat');
     stompClient = Stomp.over(socket);
 
     const token = localStorage.getItem('accessToken');
@@ -356,12 +356,15 @@
     if (!roomId || !content || !currentUserId) {
       return;
     }
+
+    const token = localStorage.getItem('accessToken');
     const msgObj = {
-      sender: currentUserId,
       content: content,
       roomId: roomId
     };
-    stompClient.send(`/app/chat/${roomId}`, {}, JSON.stringify(msgObj));
+    stompClient.send(`/app/chat/${roomId}`, {
+      Authorization: `Bearer ${token}` // <-- 헤더에 Authorization 추가
+    }, JSON.stringify(msgObj));
     document.getElementById('chatMessage').value = '';
   }
 
